--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
         <div class="testimonials-container">
           <div class="person-testimonial">
             <div class="person-img-container">
-              <img src="/img/people/customer-4.jpg" alt="" class="person-img" />
+              <img src="img/people/customer-4.jpg" alt="" class="person-img" />
             </div>
 
             <div class="review">
