--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </div>
 
           <input type="checkbox" id="nav-check" hidden />
-          <nav class="main-nav-bar flex">
+          <nav class="main-nav-bar">
             <ul class="main-nav">
               <li class="nav-link-item">
                 <a href="#Home" class="nav-link">Home</a>
@@ -80,7 +80,7 @@
       </div>
     </header>
 
-    <section class="section-hero">
+    <section class="section-hero" id="Home">
       <div class="container">
         <div class="hero-text-box">
           <h1 class="primary-heading">
@@ -265,7 +265,7 @@
       </div>
     </section>
 
-    <section class="services">
+    <section class="services" id="Services">
       <div class="container">
         <div class="services-title text-center">
           <h2 class="secondary-heading">
@@ -309,13 +309,13 @@
           </div>
 
           <div class="service-img-containere">
-            <img src="/img/features-thumb-2.png" alt="" class="service-img" />
+            <img src="img/features-thumb-2.png" alt="" class="service-img" />
           </div>
         </div>
       </div>
     </section>
 
-    <section class="statistics">
+    <section class="statistics" id="Pages">
       <div class="container">
         <div class="how-title statistics-title">
           <h2 class="secondary-heading">How does it work</h2>
@@ -532,12 +532,12 @@
       </div>
     </section>
 
-    <section class="testimonials">
+    <section class="testimonials" id="News">
       <div class="container">
         <div class="testimonials-container">
           <div class="person-testimonial">
             <div class="person-img-container">
-              <img src="/img/people/customer-4.jpg" alt="" class="person-img" />
+              <img src="img/people/customer-4.jpg" alt="" class="person-img" />
             </div>
 
             <div class="review">
@@ -661,7 +661,7 @@
       </div>
     </section>
 
-    <footer class="footer">
+    <footer class="footer" id="Contact">
       <div class="container">
         <div class="footer-container">
           <div class="page-info">
