adding the favicon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="it's a service to make apps for people so start make your app."
     />
+    <link rel="icon" href="img/sponsors/sponser-7.png" />
     <title>Appie LandingPage</title>
     <!-- ========== Font Awesome ========== -->
     <link
