--- a/index.html
+++ b/index.html
@@ -47,22 +47,20 @@
           </div>
 
           <input type="checkbox" id="nav-check" hidden />
-          <nav class="main-nav-bar">
+          <nav class="main-navbar">
             <ul class="main-nav">
               <li class="nav-link-item">
-                <a href="#Home" class="nav-link">Home</a>
-                <i class="fa-solid fa-angle-down nav-link-icon"></i>
+                <a href="#Home" class="nav-link">Home <i class="fa-solid fa-angle-down nav-link-icon"></i></a>
+                
               </li>
               <li class="nav-link-item">
                 <a href="#Service" class="nav-link">Service</a>
               </li>
               <li class="nav-link-item">
-                <a href="#Pages" class="nav-link">Pages</a>
-                <i class="fa-solid fa-angle-down nav-link-icon"></i>
+                <a href="#Pages" class="nav-link">Pages <i class="fa-solid fa-angle-down nav-link-icon"></i></a>
               </li>
               <li class="nav-link-item">
-                <a href="#News" class="nav-link">News</a>
-                <i class="fa-solid fa-angle-down nav-link-icon"></i>
+                <a href="#News" class="nav-link">News <i class="fa-solid fa-angle-down nav-link-icon"></i></a>
               </li>
               <li class="nav-link-item">
                 <a href="#Contact" class="nav-link">Contact</a>
@@ -74,7 +72,7 @@
             <a href="#" class="get-started-link">Get Started</a>
           </div>
 
-          <label for="nav-check" class="burger-menu-checker">
+          <label for="nav-check" class="burger-menu-checker menu-toggle-btn">
             <i class="burger-menu fa-solid fa-bars"></i>
           </label>
         </div>
@@ -89,8 +87,7 @@
           </h1>
           <p class="sub-heading">Find the best application in the appie.</p>
 
-          <form action="">
-            <div class="heading-input">
+          <form action="" class="heading-input">
               <i class="email-icon fa-regular fa-envelope"></i>
               <input
                 type="email"
@@ -100,7 +97,6 @@
               <button class="submit">
                 <i class="input-btn fa-solid fa-arrow-right"></i>
               </button>
-            </div>
           </form>
 
           <div class="hero-feedback">
@@ -679,10 +675,18 @@
               <i class="input-btn fa-solid fa-arrow-right"></i>
             </a>
             <div class="social-icons">
-              <i class="fa-brands fa-facebook-f social-icon"></i>
-              <i class="fa-brands fa-twitter social-icon"></i>
-              <i class="fa-brands fa-pinterest-p social-icon"></i>
-              <i class="fa-brands fa-linkedin-in social-icon"></i>
+              <a href="#">
+                <i class="fa-brands fa-facebook-f social-icon"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-twitter social-icon"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-pinterest-p social-icon"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-linkedin-in social-icon"></i>
+              </a>
             </div>
           </div>
 
