changing px to rem

--- a/index.html
+++ b/index.html
@@ -50,17 +50,22 @@
           <nav class="main-navbar">
             <ul class="main-nav">
               <li class="nav-link-item">
-                <a href="#Home" class="nav-link">Home <i class="fa-solid fa-angle-down nav-link-icon"></i></a>
-                
+                <a href="#Home" class="nav-link"
+                  >Home <i class="fa-solid fa-angle-down nav-link-icon"></i
+                ></a>
               </li>
               <li class="nav-link-item">
                 <a href="#Service" class="nav-link">Service</a>
               </li>
               <li class="nav-link-item">
-                <a href="#Pages" class="nav-link">Pages <i class="fa-solid fa-angle-down nav-link-icon"></i></a>
+                <a href="#Pages" class="nav-link"
+                  >Pages <i class="fa-solid fa-angle-down nav-link-icon"></i
+                ></a>
               </li>
               <li class="nav-link-item">
-                <a href="#News" class="nav-link">News <i class="fa-solid fa-angle-down nav-link-icon"></i></a>
+                <a href="#News" class="nav-link"
+                  >News <i class="fa-solid fa-angle-down nav-link-icon"></i
+                ></a>
               </li>
               <li class="nav-link-item">
                 <a href="#Contact" class="nav-link">Contact</a>
@@ -88,15 +93,15 @@
           <p class="sub-heading">Find the best application in the appie.</p>
 
           <form action="" class="heading-input">
-              <i class="email-icon fa-regular fa-envelope"></i>
-              <input
-                type="email"
-                placeholder="info@appie.com"
-                class="input-email"
-              />
-              <button class="submit">
-                <i class="input-btn fa-solid fa-arrow-right"></i>
-              </button>
+            <i class="email-icon fa-regular fa-envelope"></i>
+            <input
+              type="email"
+              placeholder="info@appie.com"
+              class="input-email"
+            />
+            <button class="submit">
+              <i class="input-btn fa-solid fa-arrow-right"></i>
+            </button>
           </form>
 
           <div class="hero-feedback">
@@ -744,7 +749,9 @@
               <span>Download for Android</span>
             </a>
           </div>
-          <p class="copy-right">Copyright	&copy; 2022 Appie. All rights reserved.</p>
+          <p class="copy-right">
+            Copyright &copy; 2022 Appie. All rights reserved.
+          </p>
         </div>
       </div>
     </footer>
