putting the alt for the images

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="main-nav-box">
           <div class="appie-logo">
             <a href="#inde.html">
-              <img src="img/logo.png" alt="" class="appie-img-logo" />
+              <img src="img/logo.png" alt="Logo-image" class="appie-img-logo" />
             </a>
           </div>
 
@@ -108,22 +108,22 @@
             <div class="feedback-imgs">
               <img
                 src="img/people/customer-1.jpg"
-                alt=""
+                alt="customer-image-1"
                 class="feedback-img"
               />
               <img
                 src="img/people/customer-2.jpg"
-                alt=""
+                alt="customer-image-2"
                 class="feedback-img"
               />
               <img
                 src="img/people/customer-3.jpg"
-                alt=""
+                alt="customer-image-3"
                 class="feedback-img"
               />
               <img
                 src="img/people/customer-4.jpg"
-                alt=""
+                alt="customer-image-14"
                 class="feedback-img"
               />
             </div>
@@ -136,7 +136,7 @@
         </div>
 
         <div class="hero-img-container">
-          <img src="img/hero.png" alt="Hero-img" class="hero-img" />
+          <img src="img/hero.png" alt="Hero-section-image" class="hero-img" />
         </div>
       </div>
     </section>
@@ -227,7 +227,7 @@
 
         <div class="marketing">
           <div class="marketing-img-container">
-            <img src="img/about-thumb.png" alt="" class="marketing-img" />
+            <img src="img/about-thumb.png" alt="Thumb-image" class="marketing-img" />
           </div>
 
           <div class="marketing-text">
@@ -311,7 +311,7 @@
           </div>
 
           <div class="service-img-containere">
-            <img src="img/features-thumb-2.png" alt="" class="service-img" />
+            <img src="img/features-thumb-2.png" alt="Thumb-image-2" class="service-img" />
           </div>
         </div>
       </div>
@@ -330,7 +330,7 @@
           <div class="statistic-box">
             <img
               src="img/icons/counter-icon-1.svg"
-              alt=""
+              alt="people-icon"
               class="statistic-icon"
             />
             <p class="numbers">45k+</p>
@@ -339,7 +339,7 @@
           <div class="statistic-box">
             <img
               src="img/icons/counter-icon-2.svg"
-              alt=""
+              alt="gift-icon"
               class="statistic-icon"
             />
             <p class="numbers">108+</p>
@@ -348,7 +348,7 @@
           <div class="statistic-box">
             <img
               src="img/icons/counter-icon-3.svg"
-              alt=""
+              alt="ballon-icon"
               class="statistic-icon"
             />
             <p class="numbers">307+</p>
@@ -357,7 +357,7 @@
           <div class="statistic-box">
             <img
               src="img/icons/counter-icon-4.svg"
-              alt=""
+              alt="messages-icon"
               class="statistic-icon"
             />
             <p class="numbers">725k+</p>
@@ -368,7 +368,7 @@
         <div class="media-container">
           <div class="video">
             <div class="video-container">
-              <img src="img/video-thumb-1.jpg" alt="" class="video-img" />
+              <img src="img/video-thumb-1.jpg" alt="Video-thumb-image" class="video-img" />
               <div class="border-icon">
                 <div class="pause-icon-container">
                   <i class="fa-solid fa-pause pause-icon"></i>
@@ -388,7 +388,7 @@
           </div>
           <div class="small-video-img-box">
             <div class="small-video-img-container">
-              <img src="img/video-slide-1.jpg" alt="" class="small-video-img" />
+              <img src="img/video-slide-1.jpg" alt="Video-mobile-thumb-image" class="small-video-img" />
               <div class="arrows">
                 <i class="fa-solid fa-arrow-left custom-arrow"></i>
                 <i class="fa-solid fa-arrow-right custom-arrow"></i>
@@ -539,7 +539,7 @@
         <div class="testimonials-container">
           <div class="person-testimonial">
             <div class="person-img-container">
-              <img src="img/people/customer-4.jpg" alt="" class="person-img" />
+              <img src="img/people/customer-4.jpg" alt="Testimonials-person-image" class="person-img" />
             </div>
 
             <div class="review">
@@ -589,42 +589,42 @@
             <div class="sponsors-container-img">
               <img
                 src="img/sponsors/sponser-1.png"
-                alt=""
+                alt="Company-image"
                 class="sponsor-img"
               />
             </div>
             <div class="sponsors-container-img">
               <img
                 src="img/sponsors/sponser-2.png"
-                alt=""
+                alt="Brand-image"
                 class="sponsor-img"
               />
             </div>
             <div class="sponsors-container-img">
               <img
                 src="img/sponsors/sponser-3.png"
-                alt=""
+                alt="Company-image"
                 class="sponsor-img"
               />
             </div>
             <div class="sponsors-container-img">
               <img
                 src="img/sponsors/sponser-4.png"
-                alt=""
+                alt="Javascript-image"
                 class="sponsor-img"
               />
             </div>
             <div class="sponsors-container-img">
               <img
                 src="img/sponsors/sponser-5.png"
-                alt=""
+                alt="Company-image"
                 class="sponsor-img"
               />
             </div>
             <div class="sponsors-container-img">
               <img
                 src="img/sponsors/sponser-6.png"
-                alt=""
+                alt="Brand-name-image"
                 class="sponsor-img"
               />
             </div>
@@ -633,28 +633,28 @@
             <div class="sponsors-container-img">
               <img
                 src="img/sponsors/sponser-7.png"
-                alt=""
+                alt="Logo-image"
                 class="sponsor-img"
               />
             </div>
             <div class="sponsors-container-img">
               <img
                 src="img/sponsors/sponser-8.png"
-                alt=""
+                alt="VSCode-image"
                 class="sponsor-img"
               />
             </div>
             <div class="sponsors-container-img">
               <img
                 src="img/sponsors/sponser-9.png"
-                alt=""
+                alt="Company-image"
                 class="sponsor-img"
               />
             </div>
             <div class="sponsors-container-img">
               <img
                 src="img/sponsors/sponser-10.png"
-                alt=""
+                alt="Brand-img"
                 class="sponsor-img"
               />
             </div>
@@ -669,7 +669,7 @@
           <div class="page-info">
             <div class="appie-logo">
               <a href="#inde.html">
-                <img src="img/logo.png" alt="" class="appie-img-logo" />
+                <img src="img/logo.png" alt="Logo-image" class="appie-img-logo" />
               </a>
             </div>
             <p class="text-info">
