fixing the sponsors box

--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
         </div>
 
         <div class="sponsors-container">
-          <div class="sponsors-box">
+          <div class="sponsor-box">
             <div class="sponsors-container-img">
               <img
                 src="img/sponsors/sponser-1.png"
@@ -629,7 +629,7 @@
               />
             </div>
           </div>
-          <div class="sponsors-box">
+          <div class="sponsor-box">
             <div class="sponsors-container-img">
               <img
                 src="img/sponsors/sponser-7.png"
