change the name of the sponsors images to support because of the add blocker on brave

--- a/index.html
+++ b/index.html
@@ -574,9 +574,9 @@
       </div>
     </section>
 
-    <section class="sponsors-section">
+    <section class="support-section">
       <div class="container">
-        <div class="sponsors-title text-center">
+        <div class="support-title text-center">
           <h2 class="secondary-heading">
             Appie works best with<br />
             your favorite platforms
@@ -584,78 +584,78 @@
           <p class="sub-heading">Join over 40,000 businesses worldwide.</p>
         </div>
 
-        <div class="sponsors-container">
-          <div class="sponsor-box">
-            <div class="sponsors-container-img">
+        <div class="support-container">
+          <div class="support-box">
+            <div class="support-container-img">
               <img
                 src="img/sponsors/sponser-1.png"
                 alt="Company-image"
-                class="sponsor-img"
+                class="support-img"
               />
             </div>
-            <div class="sponsors-container-img">
+            <div class="support-container-img">
               <img
                 src="img/sponsors/sponser-2.png"
                 alt="Brand-image"
-                class="sponsor-img"
+                class="support-img"
               />
             </div>
-            <div class="sponsors-container-img">
+            <div class="support-container-img">
               <img
                 src="img/sponsors/sponser-3.png"
                 alt="Company-image"
-                class="sponsor-img"
+                class="support-img"
               />
             </div>
-            <div class="sponsors-container-img">
+            <div class="support-container-img">
               <img
                 src="img/sponsors/sponser-4.png"
                 alt="Javascript-image"
-                class="sponsor-img"
+                class="support-img"
               />
             </div>
-            <div class="sponsors-container-img">
+            <div class="support-container-img">
               <img
                 src="img/sponsors/sponser-5.png"
                 alt="Company-image"
-                class="sponsor-img"
+                class="support-img"
               />
             </div>
-            <div class="sponsors-container-img">
+            <div class="support-container-img">
               <img
                 src="img/sponsors/sponser-6.png"
                 alt="Brand-name-image"
-                class="sponsor-img"
+                class="support-img"
               />
             </div>
           </div>
-          <div class="sponsor-box">
-            <div class="sponsors-container-img">
+          <div class="support-box">
+            <div class="support-container-img">
               <img
                 src="img/sponsors/sponser-7.png"
                 alt="Logo-image"
-                class="sponsor-img"
+                class="support-img"
               />
             </div>
-            <div class="sponsors-container-img">
+            <div class="support-container-img">
               <img
                 src="img/sponsors/sponser-8.png"
                 alt="VSCode-image"
-                class="sponsor-img"
+                class="support-img"
               />
             </div>
-            <div class="sponsors-container-img">
+            <div class="support-container-img">
               <img
                 src="img/sponsors/sponser-9.png"
                 alt="Company-image"
-                class="sponsor-img"
+                class="support-img"
               />
             </div>
-            <div class="sponsors-container-img">
+            <div class="support-container-img">
               <img
                 src="img/sponsors/sponser-10.png"
                 alt="Brand-img"
-                class="sponsor-img"
+                class="support-img"
               />
             </div>
           </div>
