fixing some numbers and adding foucs

--- a/index.html
+++ b/index.html
@@ -721,17 +721,16 @@
             <h4>Get in Touch</h4>
             <ul>
               <li>
-                <i class="fa-regular fa-envelope touch-icon"></i>
-                <a href="#">support@appie.com</a>
+                <a href="#"><i class="fa-regular fa-envelope touch-icon"></i>support@appie.com</a>
               </li>
               <li>
-                <i class="fa-solid fa-phone-flip touch-icon"></i>
-                <a href="#">+(642) 342 762 44</a>
+                <a href="#"><i class="fa-solid fa-phone-flip touch-icon"></i>+(642) 342 762 44</a>
               </li>
               <li>
-                <i class="fa-solid fa-location-dot touch-icon"></i>
                 <a href="#"
-                  >442 Belle Terre St Floor 7, San Francisco, AV 4206</a
+                  >
+                  <i class="fa-solid fa-location-dot touch-icon"></i>
+                  442 Belle Terre St Floor 7, San Francisco, AV 4206</a
                 >
               </li>
             </ul>
